Major rewrite and documentation restructuring